force-app/main/default/objects/Jira_Issues__c/Jira_Issues__c.object-meta.xml
<CustomObject>
    <description>This object contains the Records of the Jira Issues.</description>
    <label>Jira Issue</label>
    <nameField>
        <displayFormat>IS-{0000000}</displayFormat>
        <label>JIRA-Auto No in SF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jira Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>