force-app/main/default/objects/Jira_Issues__c/fields/Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Name__c</fullName>
    <label>Assignee Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>