force-app/main/default/objects/Jira_Issues__c/fields/Fix_Version__c.field-meta.xml
<CustomField>
    <fullName>Fix_Version__c</fullName>
    <label>Fix Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>