force-app/main/default/objects/Jira_Issues__c/fields/Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Issue_Key__c</fullName>
    <description>Contains the Issue key from jira.</description>
    <externalId>true</externalId>
    <label>Issue Key</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>