force-app/main/default/objects/Jira_Issues__c/fields/Issue_Sprint_Name__c.field-meta.xml
<CustomField>
    <fullName>Issue_Sprint_Name__c</fullName>
    <label>Issue Sprint Name</label>
    <type>TextArea</type>
</CustomField>