force-app/main/default/objects/Jira_Issues__c/fields/IssueTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>IssueTypeDescription__c</fullName>
    <label>IssueTypeDescription</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>