force-app/main/default/objects/Jira_Issues__c/fields/IssueTypeName__c.field-meta.xml
<CustomField>
    <fullName>IssueTypeName__c</fullName>
    <label>IssueTypeName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>