force-app/main/default/objects/Jira_Issues__c/fields/Project_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Category_Description__c</fullName>
    <label>Project Category Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>