force-app/main/default/objects/Jira_Issues__c/fields/Project_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Category_Name__c</fullName>
    <label>Project Category Name</label>
    <type>TextArea</type>
</CustomField>