force-app/main/default/objects/Jira_Issues__c/fields/Reporter_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Name__c</fullName>
    <label>Reporter Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>