force-app/main/default/objects/Jira_Issues__c/fields/Sprint_Names__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Names__c</fullName>
    <label>Sequence</label>
    <type>TextArea</type>
</CustomField>