force-app/main/default/objects/Jira_Issues__c/fields/Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Category__c</fullName>
    <label>Status Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>