force-app/main/default/objects/Jira_Issues__c/fields/Story_Point__c.field-meta.xml
<CustomField>
    <fullName>Story_Point__c</fullName>
    <label>Story Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>